examples/test/testpolicy12079.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12079
  namespace: namespace362
spec:
  podSelector:
    matchLabels:
      key26: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value39
          key9: value4
      podSelector:
        matchLabels:
          key34: value45
          key15: value18
          key1: value39
